# stepshots

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: ci.yml  release.yml  update-hero-demo.yml
crates/cli/: Cargo.toml
crates/cli/src/: actions.rs  browser.rs  bundle_reader.rs  bundler.rs  config.rs  error.rs  main.rs  output.rs
crates/cli/src/commands/: init.rs  inspect.rs  mod.rs  preview.rs  record.rs  rerecord.rs  serve.rs  upgrade.rs  upload.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
examples/: embed-all.html  embed-iframe.html  embed-js-snippet.html  embed-web-component.html
extension/: STORE_LISTING.md  build.ts  manifest.json  package.json  tsconfig.json
extension/src/: types.ts
extension/src/background/: bundle-builder.ts  messages.ts  service-worker.ts
extension/src/content/: hud-styles.css  hud.ts  index.ts  popover.ts  recorder.ts  selector.ts  styles.css
extension/src/panel/: panel.css  panel.html  panel.ts  panel.tsx  store.ts
extension/src/panel/views/: Export.tsx  Recording.tsx  Settings.tsx  Setup.tsx
extension/src/utils/: config-builder.ts  step-summary.ts
skills/stepshots-cli-record/: SKILL.md
