[package]
name = "stepshots-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for recording, bundling, and uploading Stepshots demos"

[[bin]]
name = "stepshots"
path = "src/main.rs"

[dependencies]
manifest = { path = "../manifest", package = "stepshots-manifest" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
futures = "0.3"

# Browser automation
chromiumoxide = "0.9"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Bundling
zip = { version = "8.2", default-features = false, features = ["deflate"] }

# HTTP client (for upload)
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls", "json"] }

# HTTP server (for serve command)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Progress & terminal
indicatif = "0.17"
console = "0.15"

# Error handling
thiserror = { workspace = true }

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15.7"
semver = "1"
